--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /tests/tests/
 /tests/results/
 /uploads
+uploads/CRIM_NO__Crim_case_1_-_2024-05-10.docx
